--- a/src/app/styles/_fonts.scss
+++ b/src/app/styles/_fonts.scss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'Inter';
   src:
-    url('../../shared/ui/assets/fonts/Inter-Regular.woff2') format('woff2'),
-    url('../../shared/ui/assets/fonts/Inter-Regular.woff') format('woff');
+    url('@/shared/ui/assets/fonts/Inter-Regular.woff2') format('woff2'),
+    url('@/shared/ui/assets/fonts/Inter-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -11,8 +11,8 @@
 @font-face {
   font-family: 'Inter';
   src:
-    url('../../shared/ui/assets/fonts/Inter-Medium.woff2') format('woff2'),
-    url('../../shared/ui/assets/fonts/Inter-Medium.woff') format('woff');
+    url('@/shared/ui/assets/fonts/Inter-Medium.woff2') format('woff2'),
+    url('@/shared/ui/assets/fonts/Inter-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -21,8 +21,8 @@
 @font-face {
   font-family: 'Inter';
   src:
-    url('../../shared/ui/assets/fonts/Inter-SemiBold.woff2') format('woff2'),
-    url('../../shared/ui/assets/fonts/Inter-SemiBold.woff') format('woff');
+    url('@/shared/ui/assets/fonts/Inter-SemiBold.woff2') format('woff2'),
+    url('@/shared/ui/assets/fonts/Inter-SemiBold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -31,8 +31,8 @@
 @font-face {
   font-family: 'Inter';
   src:
-    url('../../shared/ui/assets/fonts/Inter-Bold.woff2') format('woff2'),
-    url('../../shared/ui/assets/fonts/Inter-Bold.woff') format('woff');
+    url('@/shared/ui/assets/fonts/Inter-Bold.woff2') format('woff2'),
+    url('@/shared/ui/assets/fonts/Inter-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
